@@ -1,0 +1,32 @@
+"""
+    repos.py
+    Thu Sep 08 13:31:55 2005
+    Copyright 2005 - 2006 Coviello Giuseppe
+    immigrant@email.it
+    
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+    
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU Library General Public License for more details.
+    
+    You should have received a copy of the GNU General Public License
+    along with this program; if not, write to the Free Software
+    Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+"""
+
+class Repos(list):
+    def __init__(self, config):
+        self.list = []
+        for section in config.sections():
+            if section[:4] == "repo":
+                self.list.append((section[5:].strip(),
+                                  config.get_value(section, "url")))
+                self.append(section[5:].strip())
+
+    def get_url(self, repo_name):
+        return self.list[self.index(repo_name)][1]
