@@ -1,3 +1,9 @@
+	* 07/09:
+	- Created Repos class
+	- Created download with progressbar
+	- Improved Packages class
+	- Cleaned code
+	- Supporting -U command
 	* 06/09:
 	- homemade OptionParser
 	* 05/09:
